Fixed index.html error and added back in the purge option to tailwind to only take the styles used in the actual app

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,24 +2,45 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="Photogram • Instagram clone made with React + Firebase">	
-		<meta property="og:title" content="Photogram">
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="">
-		<meta property="og:image" content="">
-		<link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
-		<link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
-		<link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
-		<meta name="msapplication-TileColor" content="#da532c">
-		<meta name="theme-color" content="#ffffff">
-		<meta name="theme-color" content="#fafafa">
+		<meta
+			name="description"
+			content="Photogram • Instagram clone made with React + Firebase"
+		/>
+		<meta property="og:title" content="Photogram" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="" />
+		<meta property="og:image" content="" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="%PUBLIC_URL%/apple-touch-icon.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="%PUBLIC_URL%/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="%PUBLIC_URL%/favicon-16x16.png"
+		/>
+		<link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+		<link
+			rel="mask-icon"
+			href="%PUBLIC_URL%/safari-pinned-tab.svg"
+			color="#5bbad5"
+		/>
+		<meta name="msapplication-TileColor" content="#da532c" />
+		<meta name="theme-color" content="#ffffff" />
+		<meta name="theme-color" content="#fafafa" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Photogram</title>
 	</head>
-	<body ">
+	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="lightbox"></div>
 		<div id="root"></div>
